[package]
name = "rs1090"
version = "0.1.0"
edition = "2021"
description = "ADS-B flight tracker and CO₂ estimator — eventual tar1090 replacement"
license = "MIT"

[[bin]]
name = "rs1090"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON parsing (readsb aircraft.json)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite (embedded, no external daemon)
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP server (serves co2data.json + future web UI)
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# CLI arguments
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time / date handling
chrono = { version = "0.4", features = ["serde"] }

# File watching (detect aircraft.json changes efficiently)
notify = "6"

# Graceful shutdown
tokio-util = "0.7"
adsb_deku = { version = "0.7", features = ["serde"] }
thiserror = "2.0.18"

[profile.release]
lto = true
strip = true
opt-level = "z"      # size-optimised for container images
